tdf#132082 Fix a crash in LOKit (Japanese-only)

Change-Id: I09c8d3a129c0d1d2fab561add0447869156b193f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96693
Tested-by: Andras Timar <andras.timar@collabora.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>